Добавил и исправил данные переводов, групп и фото
Добавил альбомы, переводы и кнопку "вниз" в чат

--- a/Samples/ChatFMX/ChatFMX.Frame.Attachment.Audio.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Attachment.Audio.fmx
@@ -1,4 +1,5 @@
 inherited FrameAttachmentAudio: TFrameAttachmentAudio
+  HitTest = True
   Margins.Top = 6.000000000000000000
   Size.Width = 427.000000000000000000
   Size.Height = 40.000000000000000000
