Правки в клавиатура, сообщения, история. геопозиции
Вложения - история, правка пользовательских событий. Переработка ошибки токна.
Правки в клиенте.
Добавлена клавиатура бота, обработка кнопок клавиатуры. Окон геопозиции, открытия ссылки

--- a/Samples/ChatFMX/ChatFMX.Frame.Message.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Message.fmx
@@ -3,8 +3,9 @@ object FrameMessage: TFrameMessage
   Cursor = crHandPoint
   Margins.Left = 7.000000000000000000
   Margins.Right = 7.000000000000000000
-  Size.Width = 610.000000000000000000
-  Size.Height = 482.000000000000000000
+  Margins.Bottom = 4.000000000000000000
+  Size.Width = 580.000000000000000000
+  Size.Height = 302.000000000000000000
   Size.PlatformDefault = False
   OnMouseUp = FrameMouseUp
   OnMouseEnter = FrameMouseEnter
@@ -14,10 +15,10 @@ object FrameMessage: TFrameMessage
   object LayoutContent: TLayout
     Align = Client
     Padding.Top = 7.000000000000000000
-    Padding.Right = 35.000000000000000000
+    Padding.Right = 30.000000000000000000
     Padding.Bottom = 6.000000000000000000
-    Size.Width = 610.000000000000000000
-    Size.Height = 482.000000000000000000
+    Size.Width = 580.000000000000000000
+    Size.Height = 302.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
     object RectangleUnread: TRectangle
@@ -26,8 +27,8 @@ object FrameMessage: TFrameMessage
       HitTest = False
       Margins.Left = 30.000000000000000000
       Margins.Right = 30.000000000000000000
-      Size.Width = 550.000000000000000000
-      Size.Height = 482.000000000000000000
+      Size.Width = 520.000000000000000000
+      Size.Height = 302.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
       XRadius = 3.000000000000000000
@@ -37,8 +38,8 @@ object FrameMessage: TFrameMessage
       Align = Contents
       Fill.Color = xFF333333
       HitTest = False
-      Size.Width = 610.000000000000000000
-      Size.Height = 482.000000000000000000
+      Size.Width = 580.000000000000000000
+      Size.Height = 302.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
       XRadius = 3.000000000000000000
@@ -48,8 +49,8 @@ object FrameMessage: TFrameMessage
       Align = Contents
       Fill.Color = xFF857250
       HitTest = False
-      Size.Width = 610.000000000000000000
-      Size.Height = 482.000000000000000000
+      Size.Width = 580.000000000000000000
+      Size.Height = 302.000000000000000000
       Size.PlatformDefault = False
       Stroke.Kind = None
       XRadius = 3.000000000000000000
@@ -57,13 +58,13 @@ object FrameMessage: TFrameMessage
     end
     object LayoutClient: TLayout
       Align = Client
-      Size.Width = 440.000000000000000000
-      Size.Height = 469.000000000000000000
+      Size.Width = 416.000000000000000000
+      Size.Height = 289.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 2
       object LayoutFrom: TLayout
         Align = MostTop
-        Size.Width = 440.000000000000000000
+        Size.Width = 416.000000000000000000
         Size.Height = 21.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
@@ -143,9 +144,8 @@ object FrameMessage: TFrameMessage
         Cursor = crDefault
         DisableFocusEffect = True
         EnabledScroll = False
-        Margins.Top = 4.000000000000000000
-        Position.Y = 25.000000000000000000
-        Size.Width = 440.000000000000000000
+        Position.Y = 21.000000000000000000
+        Size.Width = 416.000000000000000000
         Size.Height = 52.000000000000000000
         Size.PlatformDefault = False
         StyleLookup = 'memo_clear'
@@ -157,7 +157,7 @@ object FrameMessage: TFrameMessage
         OnMouseUp = MemoTextMouseUp
         OnMouseEnter = FrameMouseEnter
         OnMouseLeave = FrameMouseLeave
-        Viewport.Width = 440.000000000000000000
+        Viewport.Width = 416.000000000000000000
         Viewport.Height = 52.000000000000000000
       end
       object FlowLayoutMedia: TFlowLayout
@@ -165,8 +165,8 @@ object FrameMessage: TFrameMessage
         ClipChildren = True
         HitTest = False
         Margins.Top = 4.000000000000000000
-        Position.Y = 81.000000000000000000
-        Size.Width = 440.000000000000000000
+        Position.Y = 77.000000000000000000
+        Size.Width = 416.000000000000000000
         Size.Height = 64.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 2
@@ -179,8 +179,8 @@ object FrameMessage: TFrameMessage
       end
       object LayoutUpdated: TLayout
         Align = MostBottom
-        Position.Y = 449.000000000000000000
-        Size.Width = 440.000000000000000000
+        Position.Y = 269.000000000000000000
+        Size.Width = 416.000000000000000000
         Size.Height = 20.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 3
@@ -204,26 +204,76 @@ object FrameMessage: TFrameMessage
       end
       object LayoutFwdMessages: TLayout
         Align = Bottom
-        Position.Y = 399.000000000000000000
-        Size.Width = 440.000000000000000000
+        Position.Y = 201.000000000000000000
+        Size.Width = 416.000000000000000000
         Size.Height = 50.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 5
+        OnResize = LayoutFwdMessagesResize
+      end
+      object LayoutDeleted: TLayout
+        Align = Bottom
+        Position.Y = 251.000000000000000000
+        Size.Width = 416.000000000000000000
+        Size.Height = 18.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 4
         OnResize = LayoutFwdMessagesResize
+        object LabelMesDeleted: TLabel
+          Align = MostLeft
+          AutoSize = True
+          Cursor = crHandPoint
+          StyledSettings = []
+          Margins.Right = 6.000000000000000000
+          Size.Width = 127.000000000000000000
+          Size.Height = 18.000000000000000000
+          Size.PlatformDefault = False
+          TextSettings.Font.Family = 'Roboto'
+          TextSettings.Font.Size = 13.000000000000000000
+          TextSettings.FontColor = xFFE1E3E6
+          TextSettings.WordWrap = False
+          Text = #1057#1086#1086#1073#1097#1077#1085#1080#1077' '#1091#1076#1072#1083#1077#1085#1086'.'
+          ParentShowHint = False
+          ShowHint = True
+          TabOrder = 1
+        end
+        object LabelRestoreMessage: TLabel
+          Align = MostLeft
+          AutoSize = True
+          Cursor = crHandPoint
+          StyledSettings = []
+          HitTest = True
+          Margins.Right = 6.000000000000000000
+          Position.X = 133.000000000000000000
+          Size.Width = 87.000000000000000000
+          Size.Height = 18.000000000000000000
+          Size.PlatformDefault = False
+          TextSettings.Font.Family = 'Roboto'
+          TextSettings.Font.Size = 13.000000000000000000
+          TextSettings.FontColor = xFF71AAEB
+          TextSettings.WordWrap = False
+          Text = #1042#1086#1089#1089#1090#1072#1085#1086#1074#1080#1090#1100
+          TabOrder = 0
+          OnClick = LabelRestoreMessageClick
+          OnMouseEnter = LabelFromMouseEnter
+          OnMouseLeave = LabelFromMouseLeave
+        end
       end
     end
     object LayoutLeft: TLayout
       Align = Left
       Position.Y = 7.000000000000000000
-      Size.Width = 86.000000000000000000
-      Size.Height = 469.000000000000000000
+      Size.Width = 85.000000000000000000
+      Size.Height = 289.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       object LayoutLeftTop: TLayout
         Align = Top
         Margins.Left = 5.000000000000000000
+        Margins.Top = 1.000000000000000000
         Position.X = 5.000000000000000000
-        Size.Width = 81.000000000000000000
+        Position.Y = 1.000000000000000000
+        Size.Width = 80.000000000000000000
         Size.Height = 36.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
@@ -233,39 +283,39 @@ object FrameMessage: TFrameMessage
           Fill.Bitmap.Bitmap.PNG = {
             89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
             DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-            087549444154785EED9B7F70545715C7BFF7BD6409641B4292FDC13F10D39848
+            087449444154785EED9B7F70545715C7BFF7BD6409641B4292FDC13F10D39848
             7E515AD276184342A0151DA7B6366066948960AD62128BD399FE47D318662C30
             2A3505B59D09D4EA3F8EFDA7E38022A3A49D51A7A6B4841F0E0E95062DCDE6C7
-            A644B4E4C77BD77B3627B049DEDBBCF7763732633E33993DE7ECB27BEFB9E7DE
+            8646B4E4C77BD77B3627B049DEDBBCF7763732633E33993DE7ECB27BEFB9E7DE
             77CFBD072CB2C8228BFC3F23F8356DB4B5B569573052A16B669D9428979A2CD5
-            80D5139039D70DFD2EFACC72DDF85726C4A809F409535C1202170C533BFD09AC
-            38DFDEDEAECCE9232D0EA04EBF9F31B45133B0C3D4C4231A4401BFE50A137248
-            33E5EBA68E570B270BDE48873352EA8058C7F591ED80EC50A35CCCE694A07A7E
-            5935776FA1B1E297A97444CA1CD0D4FEEDCD9A30F603DA7D6C4A13E6DB528867
-            8EED7DF1F76C488AA41DB0B36D4F1174E388123F33655920A4FC0DCC8CE6A3ED
-            87FECE164F24E5805DEDAD9BC685F1AB4CE8796C5A502660447D526FE86AEBFC
-            039B5CA3A6AA377676B4EE36C4E8C9FF55E709FA6D6A03B5854DAE711D014FFE
-            F4C9CCB17EDF0B9A109E7F341D9852FE784978FCA997BEF1D2049B1CE13A02EE
-            C4CE13D4A689C89243AC3A46E7574750A80988E7584D31015415672312FD0FEB
-            9EA8BEB7AE3AF2CEE9BFF4B03E2F8E2380163C4CA293D534300814ED426B553E
-            EBDE30C48DCEA68EE63A56E7C59103E85147ABBD8A175711E396819161143CF8
-            045A6A4BD9E21E0D39198694AFC51ECF0E701601DAE4E18558EDFB95038840E9
-            A36829591E93BD406D95BAF122AB0999D7015FED68A987105B594D2FD1210CB1
-            18A8FB26B6072759738F7ABC7D36366DE721A103686F2FA43CC06AFA890ED34A
-            708BF247BF8EDA25AC78C0000E501F58B524E19B53894DBAF7F6F10C62F02316
-            630451BF753DF2C758758926B0BE4F0C6F63D5125B074C794E76B0EA99705E80
-            258F8436A3B1DC4FD9A027A426F6258A02DB3762F97CB2296D5E0DB66DF91482
-            63DEE73211ACDF883503DEBE83FA70558BD6B03A077BCF18D8C1A247CAD0D8B0
-            0105B9B95871F5A6C3110C2090CBE20C2AB1E5FEBBD436C41B52D8F7C5D20114
-            327492C3AA27C2D51BB0262695A1AA62D299038A4BF9DFCC25F8F026947B8C82
-            0963FC11BB696069A4333CAFC7583128F4D7DDDED1556CAD476094155B02D87C
-            6F09CB56788F029FEE0BF4E943E5ACCEC0D2017480C9A227C277976286F7420F
-            61CFD6BBD59A6E87CA031EDE858D96E17F9BE0DA35C8F71805420ACB3D81A503
-            E8F496450F94A12E6EF46F51D180E62F7E0D8DD565EAC9C036F5840817D7A071
-            FB2E3C5EC8B64484D6A22ADBE97A321B51C6C20C2CCF039ABEDB7C5A8356CBAA
-            3B8A1F437B7DA2504E8E81933FC00F2F4DC0E776832471FA685BE79C28B05B18
-            56B3E89AAAA2F4759E08AEAD44E0BA8769204CCB18B374005D5AB0E892329439
-            09E57939875F3C7F10A722ACC6130A2374DDC33430B4D825CC6C2C1D307D63E3
+            80D5139039D70DFD2EFA4CAE6EFC2B1362D404FA84292E09810B86A99DFE0456
+            9C6F6F6F57E6F491160750A7DFCF18DAA819D8616AE2110DA280DF72850939A4
+            99F27553C7AB8593056FA4C319297540ACE3FAC8764076A8512E66734A503DBF
+            AC9ABBB7D058F1CB543A22650E686AFFF6664D18FB01ED3E36A509F36D29C433
+            C7F6BEF87B362445D20ED8D9B6A708BA7144899F99B22C1052FE066646F3D1F6
+            437F678B279272C0AEF6D64DE3C2F85526F43C362D281330A23EA93774B575FE
+            814DAE5153D51B3B3B5A771B62F4E4FFAAF304FD36B581DAC226D7B88E80277F
+            FA64E658BFEF054D08CF3F9A0E4C297FBC243CFED44BDF7869824D8E701D0177
+            62E7096AD34464C921561DA3F3AB2328D404C473ACA69800AA8AB31189FE8775
+            4F54DF5B571D79E7F45F7A589F17C711400B1E26D1C96A1A18048A76A1B52A9F
+            756F18E246675347731DABF3E2C801F4A8A3D55EC58BAB8871CBC0C8300A1E7C
+            022DB5A56C718F869C0C43CAD7628F6707388B006DF2F042ACF6FDCA0144A0F4
+            51B4942C8FC95EA0B64ADD7891D584CCEB80AF76B4D44388ADACA697E8108658
+            0CD47D13DB8393ACB9473DDE3E1B9BB6F390D001B4B717521E6035FD44876925
+            B845F9A35F47ED12563C600007A80FAC5A92F0CDA9C426DD7BFB780631789DC5
+            1841D46F5D8FFC31565DA209ACEF13C3DB58B5C4D601539E931DAC7A269C1760
+            C923A1CD682CF75336E809A9897D89A2C0F68D583E9F6C4A9B57836D5B3E85E0
+            98F7B94C04EB3762CD80B7EFA03E5CD5A235ACCEC1DE330676B0E8913234366C
+            40416E2E565CBDE970040308E4B238834A6CB9FF2EB50DF18614F67DB1740085
+            0C9DE4B0EA8970F506AC894965A8AA9874E680E252FE3773093EBC09E51EA360
+            C2187FC46E1A581AE90CCFEB31560C0AFD75B77774155BEB111865C5960036DF
+            5BC2B215DEA3C0A7FB027DFA5039AB33B074001D60B2E889F0DDA598E1BDD043
+            D8B3F56EB5A6DBA1F280877761A365F8DF26B8760DF23D468190C2724F60E900
+            3ABD65D10365A88B1BFD5B5434A0F98B5F436375997A32B04D3D21C2C53568DC
+            BE0B8F17B22D11A1B5A8CA76BA9ECC4694B13003CBF380A6EF369FD6A0D5B2EA
+            8EE2C7D05E9F28949363E0E40FF0C34B13F0B9DD20499C3EDAD639270AEC1686
+            D52CBAA6AA287D9D27826B2B11F8C8C33410A6658C593A802E2D58744919CA9C
+            84F2BC9CC32F9E3F88531156E3098511FAC8C33430B4D825CC6C2C1D307D63E3
             9ABC7CB59C25C740EFEFF0FDD62E9CF9208AE80D36CE208450BEC3C76A3CBAE1
             DC019EC92B98B9FABB21720EA75E3988FD2F1F47FF723F9655E66278742A3D9E
             4910E195CA011EF383D9583A80EEEA5874457885BBD39C815ED5E9933F5723FE
@@ -278,34 +328,34 @@ object FrameMessage: TFrameMessage
             87960EA0CA0C2A4E60D539972FE1AF2C268F4D4EA13649677B54C3B39C4FA171
             637C70B5516019D5960EA00204AACC60D5051771D172A951A81D5C984527DC3E
             4F9845EF599C818A24177BD54CDDF7BA5D5185ED74A4B214165DD1DBF3479B47
-            5725BEBCA3C2D10E2EAC12AADD96A3AF16D2E36FAB8D8A72005B9C20A47D5F6C
-            1D403539AAB19759754EF44D74BFC7F26CAABE84A7125E78045055FD0476DB65
-            93BD27718216D250161BE687FAB0CACC7B93D539D85E75757777CB7B363D38A8
-            F2E506363926726504E1FB4A2DF382ECC2F5D85418803E318C8F910DFF52FA2B
-            4451C5A7B1FDF35BB07EE532FEE46C5482B4EF383E5C9E83A5F92EC6DF94DF7A
-            A1FDE079D6E690B03E80CED1AEEA436FA940717F3790B7012D0D3549274753A8
-            D07FFE7B6AF4B390A57204A7DD37257A0ACDBC0712155525BCEC8C4541FD0397
-            0544139B9CF3F13FF0D6DF0C545416AA714E86E9CEABD02FC943A68BC157F3FB
-            2B879E3B7085554B1C5588EC6C6F39E1F97E70CC8F8DB5DBB0B9CAFE44D00E4A
-            8D5F55D9E13535E6BE920257A740123871ECD9CECFB16A8BA3EBEE75B51BFE34
-            A14DEED0A12D65937332C6D1F7CF1E9C7B6F02D9054508FAD99E084A985EFB19
-            8EFDFA0CFEAD52E3A5252AECDD2CFB068685D41F7BB7FBCF236CB1C551041074
-            D34A054974FFCE26D798A337301EC941B0E21EAC5D47FB82108221F54624A202
-            BD1FFDEFBCAB3639D7D4882BD4AED117F2BBCE194C8C4E42F81F7A65EF6147BB
-            59C70E2062D558125413982493CA193731F9119DECF0E1C6920C3567D55F2E6D
-            7248F68690E6EEAEB6C33F61755E5C3980686A6F397227164931478E3EDBD9CC
-            B2235C3B9A4AD1D44B0AA220E51CC90C8DED61D931AE23601A9A0EA61CFD5132
-            6B422AA039AF4B7FAB9BB08FC7B303883BA1545617E271A70B9E155ED79A1854
-            A39B69F8AA6385CB0B0C3DE7E9B793E93C915404C443C55453F544E92DA9A1ED
-            ADDABC3C934C81743C4945403C54BFBFCA28B85F9AB2D15316390FF49DF4DDB4
-            B74F55E7899445403CB1244A8BD650658684FC82D75A033AC9A1C30CCAE729A5
-            BDE3FFCB8C15E40C2A4E98BA9F8F5D5197C62E2AE9AE6EFABA8A2E2DE8DC7EEA
-            E8FA121D60D2191E1D63A5A3D38B2CB2C8228BC400FE0B4CF8B7AF8F32803800
-            00000049454E44AE426082}
+            5725BEBCA3C2D10E2EAC12AADD96A3AF16D2E36F03CB9503D8E20421EDFB62EB
+            00AAC9518DBDCCAA73A26FA2FB3D966753F5253C95F0C22380AAEA27B0DB2E9B
+            EC3D8913B49086B2D8303FD4875566DE9BACCEC1F6AAABBBBB5BDEB3E9C14195
+            2F37B0C931912B2308DF576A99176417AEC7A6C200F489617C8C6CF897D25F21
+            8A2A3E8DED9FDF82F52B97F12767A312A47DC7F1E1F21C2CCD7731FEA6FCD60B
+            ED07CFB3368784F501748E76551F7A4B058AFBBB81BC0D6869A8493A399A4285
+            FEF3DF53A39F852C952338EDBE29D15368E63D90A8A82AE165672C0AEA1FB82C
+            209AD8E49C8FFF81B7FE66A0A2B2508D73324C775E857E491E325D0CBE9ADF5F
+            39F4DC812BAC5AE2A84264677BCB09CFF783637E6CACDD86CD55F6278276506A
+            FCAACA0EAFA931F79514B83A0592C08963CF767E8E555B1C5D77AFABDDF0A709
+            6D72870E6D299B9C93318EBE7FF6E0DC7B13C82E2842D0CFF64450C2F4DACF70
+            ECD767F06F951A2F2D5161EF66D937302CA4FED8BBDD7F1E618B2D8E2280A09B
+            562A48A2FB7736B9C61CBD81F1480E8215F760ED3ADA1784100CA937221115E8
+            FDE87FE75DB5C9B9A6465CA1768DBE90DF75CE60627412C2FFD02B7B0F3BDACD
+            3A760011ABC692A09AC0249954CEB889C9EB74B2C3871B4B32D49C557FB9B4C9
+            21D91B429ABBBBDA0EFF84D57971E500A2A9BDE5C89D5824C51C39FA6C6733CB
+            8E70ED682A45532F2988829473243334B68765C7B88E8069683A9872F447C9AC
+            09A980E6BC2EFDAD6EC23E1ECF0E20EE8452595D88C79D2E7856785D6B62508D
+            6EA6E1AB8E152E2F30F49CA7DF4EA6F3445211100F15534DD513A5B7A486B6B7
+            6AF3F24C3205D2F1241501F150FDFE2AA3E07E69CA464F59E43CD077D277D3DE
+            3E559D27521601F1C492282D5A43951912F20B5E6B0DE824870E33289FA794F6
+            8EFF2F33569033A83861EA7E3E76455D1ABBA8A4BBBAE9EB2ABAB4A073FBA9A3
+            EB4B7480496778748C958E4E2FB2C8228B2C1203F82F4AEEB7AF1ECA0F490000
+            000049454E44AE426082}
           Fill.Bitmap.WrapMode = TileStretch
           Fill.Kind = Bitmap
           Margins.Right = 15.000000000000000000
-          Position.X = 30.000000000000000000
+          Position.X = 29.000000000000000000
           Size.Width = 36.000000000000000000
           Size.Height = 36.000000000000000000
           Size.PlatformDefault = False
@@ -336,7 +386,9 @@ object FrameMessage: TFrameMessage
               0000C0407B14FE40030000000000C0407B14FE40}
             Fill.Color = xFF71AAEB
             HitTest = False
-            Size.Width = 17.500000000000000000
+            Margins.Left = 1.000000000000000000
+            Position.X = 1.000000000000000000
+            Size.Width = 15.699999809265140000
             Size.Height = 36.000000000000000000
             Size.PlatformDefault = False
             Stroke.Kind = None
@@ -347,10 +399,10 @@ object FrameMessage: TFrameMessage
     end
     object LayoutRight: TLayout
       Align = Right
-      Position.X = 526.000000000000000000
+      Position.X = 501.000000000000000000
       Position.Y = 7.000000000000000000
       Size.Width = 49.000000000000000000
-      Size.Height = 469.000000000000000000
+      Size.Height = 289.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 1
       object LayoutRightTop: TLayout
