Logout, mark important, photo viewer

--- a/Samples/ChatFMX/ChatFMX.Frame.Message.fmx
+++ b/Samples/ChatFMX/ChatFMX.Frame.Message.fmx
@@ -510,6 +510,7 @@ object FrameMessage: TFrameMessage
             Size.PlatformDefault = False
             Stroke.Kind = None
             WrapMode = Fit
+            OnClick = PathStarClick
             OnMouseEnter = FrameMouseEnter
             OnMouseLeave = FrameMouseLeave
             object ColorAnimationStar: TColorAnimation
